fix(sonar): Reliability A — SSE lock, ternario y a11y nav
Platform thread en heartbeat del copilot, candado por emitter (no sync del parámetro), ternario inútil del perfil y listener de teclado en el menú desktop.

Co-authored-by: Cursor <cursoragent@cursor.com>